# similar-string

./: Cargo.toml  README.md
src/: lib.rs
