[package]
name = "similar-string"
version = "0.1.0"
edition = "2021"
description = "Find similar strings in Rust"
license = "MIT"
repository = "https://github.com/Ph0enixKM/similar-string"
authors = ["pawel.karas@icloud.com"]
keywords = ["string", "similar", "similarity", "compare", "find", "strings", "match"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
